2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22656.

	* nasl/nasl_ssh.c (nasl_ssh_set_login): Check that username is not
	empty.
	(nasl_ssh_userauth): Return on nasl_ssh_set_login() error.

2015-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22648.

	* nasl/nasl_ssh.c (exec_ssh_cmd): Zero buffer, reset retry counter on
	read success.

2015-06-10  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22625.

	* misc/kb_redis.c (redis_vcommand, redis_command): New functions.
	Same as redisCommand and redisvCommand, but will retry after EINTR.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)
	(redis_transaction_cmd, redis_transaction_end, redis_cmd): Use retry
	versions of command functions.

2015-06-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22552.

	Add support for handling timeout option to omp_authenticate_info_ext ().

	* omp/omp.c (omp_authenticate_info_ext): Use try_read_entity ()
	instead of read_entity () to allow for timeouts. Make function
	description more accurate.

	* omp/omp.h (omp_authenticate_info_opts_t): Add timeout value to
	options.
	(omp_authenticate_info_opts_defaults): New function to initialize
	timeout option to 0 for backward compatibility.

2015-06-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22508.

	Add support for handling timeout options to omp_get_tasks_ext () and
	omp_get_report_ext ().

	* omp/omp.c (omp_get_tasks_ext, omp_get_report_ext): Use
	try_read_entity () instead of read_entity () to allow for timeouts.
	Adjust function description to include new return value.

	* omp/omp.h (omp_get_report_opts_t, omp_get_tasks_opts_t): Add timeout
	value to options.
	(omp_get_report_opts_defaults, omp_get_tasks_opts_defaults):
	Initialize timeout option to 0 for backward compatibility.

	* omp/xml.c (try_read_entity): Note possible timeout return value in
	comment.
